<resources>
    <string name="app_name">YassinAppKotlin</string>
    <string name="manfaat_membaca_yasin"> Surat Yasin merupakan surat ke-36 dalam Al-Quran dan diturunkan pada periode pertengahan di Makkah (sebelum hijrah), sehingga termasuk dalam surat Makkiyah. Dalam tradisi masyarakat Indonesia surat Yasin menjadi salah satu surat yang selalu dibaca oleh kaum muslim, khususnya ketika hari Jumat.</string>
    <string name="manfaat_pertama"><b>1. Dilimpahkan kebahagiaan</b>\n\nManfaat membaca surat Yasin yang pertama adalah dapat dilimpahkan kebahagiaan. Terutama ketika surat yasin ini dibaca setiap hari, selain akan membuat batin menjadi lebih tenang dan tidak gelisah, akan banyak orang juga yang menyukai atas izin Allah SWT.</string>
    <string name="manfaat_kedua"><b>2. Rezeki Lancar</b>\n\nManfaat membaca surat Yasin berikutnya adalah mendapatkan kelancaran rezeki. Termasuk juga kelancaran rezeki ini berupa dimudahkan segala keinginan dan hajatnya, dengan terus istiqomah dan berusaha sekuat tenaga maka Allah SWT akan semakin mempermudah segalanya.</string>
    <string name="manfaat_ketiga"><b>3. Diampuni Dosa</b>\n\nSurat yasin selain dapat mendatangkan keselamatan dan kebahagiaan ternyata juga bisa membuat pahala yang didapat lebih berlipat ganda. Selain itu, dosa-dosa yang dimiliki semasa hidup walaupun dosa itu sebesar gunung akan semakin mudah diampuni oleh Allah SWT.</string>
    <string name="manfaat_keempat"><b>4. Dijauhkan dari Malapetaka</b>\n\nSelanjutnya, membaca surat Yasin ini juga merupakan salah satu cara agar bisa terbebas dari petaka. Allah SWT akan lebih melindungi, termasuk diselamatkan selama hidup di dunia, tidak diberi penyakit yang membahayakan, mati syahid, dimudahkan saat akan keluar ruh, bahkan diberi keselamatan juga ketika di akhirat nanti.</string>
    <string name="manfaat_kelima"><b>5. Hidup Berkah</b>\n\nManfaat membaca surat Yasin berikutnya, ternyata bisa membuat keberkahan hidup semakin meningkat. Hal ini disebabkan karena pahala membaca ayat suci Al-Quran ini. Jika hidup menjadi lebih berkah maka segala urusan di dunia maupun di akhirat pasti akan lebih lancar.</string>
</resources>